# irodsd

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-irods-centos.yml  build-irods-debian.yml  build-irods-enterprise-linux.yml  build-irods-ubuntu.yml
src/: irodsaf.cpp  irodscp.cpp  irodsds.cpp  main.cpp
